<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background_color">

    <TextView
        android:id="@+id/bt_connect_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textColor="?textColor"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <LinearLayout
            android:id="@+id/bt_connect_btn"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="?bBg"
            android:orientation="horizontal">
            <TextView
                android:duplicateParentState="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bluetooth_dialog_connect"
                android:textSize="20sp"
                android:textColor="?textColor"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/bt_cancel_btn"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="?bBg"
            android:orientation="horizontal">
            <TextView
                android:duplicateParentState="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bluetooth_dialog_cancel"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="?textColor"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ignore_bt_btn"
            android:layout_gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:background="?bBg"
            android:orientation="horizontal">
            <TextView
                android:duplicateParentState="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bluetooth_dialog_clear"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="?textColor"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>