<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_color"
    tools:context=".device.DeviceActivity">

    <LinearLayout
        android:layout_marginTop="@dimen/devices_title_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/devices_title_iv_width"
            android:layout_height="@dimen/devices_title_iv_height"
            android:src="@drawable/arrow_back_white"
            android:layout_marginStart="@dimen/devices_title_iv_marginStart"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:text="@string/device_index_title_tv"
            android:textColor="@color/white"
            android:textSize="@dimen/devices_title_tv_textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/devices_title_tv_marginStart"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/devices_content_LL_paddingStart"
        android:paddingTop="@dimen/devices_content_LL_paddingTop"
        android:paddingEnd="@dimen/devices_content_LL_paddingEnd"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/devices_LL_Info"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/devices_content_LL_height">
            <TextView
                android:id="@+id/devices_tv_Info"
                android:text="@string/device_index_info_tv"
                android:textSize="@dimen/devices_info_tv_textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/devices_info_tv_marginStart"/>
            <ImageView
                android:id="@+id/arrow_info"
                android:src="@drawable/arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/devices_info_iv_height"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/devices_LL_storage"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/devices_content_LL_height">
            <TextView
                android:id="@+id/devices_tv_storage"
                android:text="@string/device_index_storage_tv"
                android:textSize="@dimen/devices_storage_tv_textSize"
                android:textColor="@color/white"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/devices_storage_tv_marginStart"/>
            <ImageView
                android:id="@+id/arrow_storage"
                android:src="@drawable/arrow"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/devices_storage_iv_height"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>