<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?background_color"
    tools:context=".network.NetworkActivity">

    <LinearLayout
        android:layout_marginTop="@dimen/net_title_marginTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="@dimen/net_title_iv_width"
            android:layout_height="@dimen/net_title_iv_height"
            android:src="?arrowBack_src"
            android:layout_marginStart="@dimen/net_title_iv_marginStart"
            android:layout_gravity="center_vertical"/>
        <TextView
            android:text="@string/net_index_title_text"
            android:textColor="?textColor"
            android:textSize="@dimen/net_title_tv_textSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/net_title_tv_marginStart"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/net_content_LL_paddingStart"
        android:paddingTop="@dimen/net_content_LL_paddingTop"
        android:paddingEnd="@dimen/net_content_LL_paddingEnd"
        android:orientation="vertical">
        <TextView
            android:text="@string/net_index_wifi_tv"
            android:textSize="@dimen/net_content_tv_textSize"
            android:textColor="?textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textDirection="ltr"/>
        <LinearLayout
            android:id="@+id/net_LL_wlan"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/net_content_LL_height"
            android:focusable="true"
            android:background="?bBg">
            <TextView
                android:duplicateParentState="true"
                android:id="@+id/net_tv_wlan"
                android:text="@string/net_index_wifi_tv"
                android:textSize="@dimen/net_tv_textSize"
                android:textColor="?textColor"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/net_tv_marginStart"
                android:textDirection="ltr"/>
            <Switch
                android:id="@+id/net_switch"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:thumb="@drawable/custom_switch_thumb"
                android:thumbTextPadding="@dimen/net_switch_thumbTextPadding"
                app:switchMinWidth="@dimen/net_switch_switchMinWidth"
                android:checked="true"
                android:track="@drawable/custom_switch_track"
                android:layout_gravity="center_vertical"
                android:paddingEnd="25dp"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/net_LL_wlanAble"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/net_content_LL_height"
            android:layout_marginTop="10dp"
            android:focusable="true"
            android:background="?bBg">
            <TextView
                android:duplicateParentState="true"
                android:id="@+id/net_tv_wlanAble"
                android:text="@string/net_index_available_tv"
                android:textSize="@dimen/net_tv_textSize"
                android:textColor="?textColor"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/net_tv_marginStart"
                android:textDirection="ltr"/>
            <TextView
                android:duplicateParentState="true"
                android:id="@+id/net_tv_ssidcurrent"
                android:text=""
                android:textSize="@dimen/net_tv_textSize"
                android:textColor="?textColor"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical" />
            <ImageView
                android:duplicateParentState="true"
                android:id="@+id/arrow_wlanAble"
                android:src="?arrowSrc"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/net_arrow_wlanAble_height"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>