<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".projection.ProjectionSettingsActivity"
    android:background="#FFFFFF">

    <ImageView
        android:layout_width="@dimen/main_title_arrow_width"
        android:layout_height="@dimen/main_title_arrow_height"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/main_title_arrow_marginStart"
        android:layout_marginTop="@dimen/main_title_arrow_marginTop"
        app:layout_constraintTop_toTopOf="parent"/>

    <!--首页标题-->
    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/projection_index_title_text"
        android:textColor="@color/black"
        android:textSize="@dimen/main_title_textSize"
        android:textStyle="normal"
        android:layout_marginStart="@dimen/main_title_marginStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/main_title_marginTop"/>

    <!--菜单list-->
    <LinearLayout
        android:id="@+id/list"
        android:layout_width="@dimen/main_list_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/main_title_marginTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvtitle">

        <!--两点梯形校正-->
        <RelativeLayout
            android:id="@+id/trapezoidal_double_point"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_RL_height"
            android:background="@drawable/test"
            android:paddingEnd="@dimen/main_RL_paddingEnd"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/iv_trapezoidal_double_point"
                android:layout_width="@dimen/main_iv_width"
                android:layout_height="@dimen/main_iv_height"
                android:scaleType="fitCenter"
                android:layout_marginTop="@dimen/main_iv_marginTop"
                android:padding="@dimen/main_iv_padding"
                android:src="@drawable/icon_trapezoidal_double_point"/>

            <TextView
                android:id="@+id/tv_trapezoidal_double_point"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/main_tv_height"
                android:layout_toRightOf="@+id/iv_trapezoidal_double_point"
                android:gravity="center_vertical"
                android:text="@string/projection_index_double_point"
                android:textColor="@color/black"
                android:textSize="@dimen/main_tv_textSize"
                android:textStyle="normal"/>
            
            <ImageView
                android:id="@+id/arrow_trapezoidal_double_point"
                android:layout_width="@dimen/main_arrow_width"
                android:layout_height="@dimen/main_arrow_height"
                android:layout_marginStart="@dimen/main_arrow_marginStart"
                android:layout_marginTop="@dimen/main_arrow_marginTop"
                android:src="@drawable/arrow_big"/>
        </RelativeLayout>

        <!--四点梯形校正-->
        <RelativeLayout
            android:id="@+id/trapezoidal_single_point"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_RL_height"
            android:background="@drawable/test"
            android:focusable="true"
            android:paddingEnd="@dimen/main_RL_paddingEnd"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/main_RL_marginTop">

            <ImageView
                android:id="@+id/iv_trapezoidal_single_point"
                android:layout_width="@dimen/main_iv_width"
                android:layout_height="@dimen/main_iv_height"
                android:layout_marginTop="@dimen/main_iv_marginTop"
                android:padding="@dimen/main_iv_padding"
                android:src="@drawable/icon_trapezoidal_single_point" />

            <TextView
                android:id="@+id/tv_trapezoidal_single_point"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/main_tv_height"
                android:layout_toRightOf="@+id/iv_trapezoidal_single_point"
                android:gravity="center_vertical"
                android:text="@string/projection_index_single_point"
                android:textColor="@color/black"
                android:textSize="@dimen/main_tv_textSize"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/arrow_trapezoidal_single_point"
                android:layout_width="@dimen/main_arrow_width"
                android:layout_height="@dimen/main_arrow_height"
                android:layout_marginStart="@dimen/main_arrow_marginStart"
                android:layout_marginTop="@dimen/main_arrow_marginTop"
                android:src="@drawable/arrow_big" />
        </RelativeLayout>

        <!--尺寸调节-->
        <RelativeLayout
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_RL_height"
            android:background="@drawable/test"
            android:focusable="true"
            android:paddingEnd="@dimen/main_RL_paddingEnd"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/main_RL_marginTop">

            <ImageView
                android:id="@+id/iv_size"
                android:layout_width="@dimen/main_iv_width"
                android:layout_height="@dimen/main_iv_height"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/main_iv_marginTop"
                android:padding="@dimen/main_iv_padding"
                android:src="@drawable/icon_size_color" />

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/main_tv_height"
                android:layout_toRightOf="@+id/iv_size"
                android:gravity="center_vertical"
                android:text="@string/projection_index_size"
                android:textColor="@color/black"
                android:textSize="@dimen/main_tv_textSize"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/arrow_size"
                android:layout_width="@dimen/main_arrow_width"
                android:layout_height="@dimen/main_arrow_height"
                android:layout_marginStart="@dimen/main_arrow_marginStart"
                android:layout_marginTop="@dimen/main_arrow_marginTop"
                android:src="@drawable/arrow_big" />
        </RelativeLayout>

        <!--投影方式-->
        <RelativeLayout
            android:id="@+id/projection"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/main_RL_height"
            android:layout_marginTop="@dimen/main_RL_marginTop"
            android:background="@drawable/test"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingEnd="@dimen/main_RL_paddingEnd">

            <ImageView
                android:id="@+id/iv_projection"
                android:layout_width="@dimen/main_iv_width"
                android:layout_height="@dimen/main_iv_height"
                android:layout_alignParentLeft="true"
                android:layout_marginTop="@dimen/main_iv_marginTop"
                android:padding="@dimen/main_iv_padding"
                android:src="@drawable/icon_projection_color" />

            <TextView
                android:id="@+id/tv_projection"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/main_tv_height"
                android:layout_toRightOf="@+id/iv_projection"
                android:gravity="center_vertical"
                android:text="@string/projection_index_projection_method"
                android:textColor="@color/black"
                android:textSize="@dimen/main_tv_textSize"
                android:textStyle="normal" />

       <TextView
                android:id="@+id/tv_projection_small"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/main_tv_height"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/projection_tv_marginEnd"
                android:paddingTop="@dimen/main_tv_paddingTop"
                android:textColor="@color/grey"
                android:textSize="@dimen/main_tv_textSize_small"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/arrow_projection"
                android:layout_width="@dimen/main_arrow_width"
                android:layout_height="@dimen/main_arrow_height"
                android:layout_marginStart="@dimen/main_arrow_marginStart"
                android:layout_marginTop="@dimen/main_arrow_marginTop"
                android:src="@drawable/arrow_big"
                 />


        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>